# ci_test_2

./: .gitignore  .gitmodules  README.md
.github/workflows/: main.yml
src/common/autonomous_msgs/: CMakeLists.txt  README.md  package.xml
src/common/autonomous_msgs/msg/: BoolStamped.msg  Boundary.msg  Cone.msg  ConeArray.msg  ConeTypeProb.msg  Covariance2D.msg  CovariancePose.msg  DoubleStamped.msg  IntStamped.msg  PointWithConfidence.msg
src/controls/common/controller_node/: CMakeLists.txt  package.xml
src/controls/common/controller_node/config/: controller_node_config.yaml
src/controls/common/controller_node/include/controller_node/: controller_node.hpp
src/controls/common/controller_node/launch/: controller_node.launch.py
src/controls/common/controller_node/src/: controller_node.cpp  controller_node_main.cpp
src/controls/control_msgs/: CMakeLists.txt  package.xml
src/controls/control_msgs/msg/: ControllerRef.msg  ReferenceState.msg
src/controls/planners/middle_line_planner/: CMakeLists.txt  package.xml
src/controls/planners/middle_line_planner/config/: middle_line_planner_config.yaml
src/controls/planners/middle_line_planner/launch/: middle_line_planner.launch.py
src/controls/planners/middle_line_planner/src/: middle_line_planner.cpp  middle_line_planner_main.cpp
src/drivers/hesai_ros_driver/: CMakeLists.txt  info.txt  package.xml
src/drivers/hesai_ros_driver/include/hesai_ros_driver/: hesai_ros_driver_node.hpp
src/drivers/hesai_ros_driver/src/: hesai_ros_driver_node.cpp  main.cpp
src/drivers/vcu_comm_interface/: CMakeLists.txt  README.md  info.txt  package.xml
src/drivers/vcu_comm_interface/config/: default.yaml
src/drivers/vcu_comm_interface/include/vcu_comm_interface/: receiver.h  receiver_msgs.h  sender.h  sender_msgs.h  socket.h
src/drivers/vcu_comm_interface/launch/: vcu_comm_interface.launch.py
src/drivers/vcu_comm_interface/src/: receiver.cpp  receiver_node.cpp  sender.cpp  sender_node.cpp  socket.cpp
src/drivers/vcu_msgs/: CMakeLists.txt  info.txt  package.xml
src/drivers/vcu_msgs/msg/: CarCommand.msg  EbsPressures.msg  FourWheelCarCommand.msg  LlcLogging.msg  LlcParameters.msg  LvBattery.msg  MissionSelect.msg  ResState.msg  StateMachine.msg  TorqueData.msg  VelocityEstimation.msg
src/estimation/boundary_estimation/: CMakeLists.txt  README.md  info.txt  package.xml
src/estimation/boundary_estimation/config/: boundary_estimation_default.yaml  camera_only_parameters.yaml  lidar_only_parameters.yaml  sensor_fusion_parameters.yaml
src/estimation/boundary_estimation/include/: boundary_estimation_backend.hpp  boundary_estimation_frontend.hpp  boundary_estimation_graph.hpp  boundary_estimation_structs.hpp  boundary_estimation_visualization.hpp  helpers.hpp  node_handle.hpp
src/estimation/boundary_estimation/launch/: boundary_estimation.launch.py  boundary_estimation_foxglove.launch.py
src/estimation/boundary_estimation/src/: boundary_estimation_backend.cpp  boundary_estimation_frontend.cpp  boundary_estimation_graph.cpp  boundary_estimation_structs.cpp  boundary_estimation_visualization.cpp  helpers.cpp  main.cpp  node_handle.cpp
src/estimation/lap_counter/: CMakeLists.txt  README.md  package.xml
src/estimation/lap_counter/config/: param.yaml
src/estimation/lap_counter/include/: lap_counter.h
src/estimation/lap_counter/launch/: foxglove_lap_counter.launch.py  lap_counter.launch.py
src/estimation/lap_counter/src/: lap_counter.cpp
src/estimation/slam/slam_backend/: CMakeLists.txt  README.md  package.xml
src/estimation/slam/slam_backend/src/: fixed_lag_smoothing_backend.cpp  graph.cpp  graph_slam.cpp  isam.cpp  isam2.cpp  slam_backend.cpp
src/estimation/slam/slam_common/: CMakeLists.txt  README.md  package.xml
src/estimation/slam/slam_common/src/: graph_visualization.cpp  slam_node.cpp  utils.cpp  visualizer.cpp
src/estimation/tf_publisher/: CMakeLists.txt  info.txt  package.xml
src/estimation/tf_publisher/config/: default.yaml
src/estimation/tf_publisher/include/: tf_publisher.h
src/estimation/tf_publisher/launch/: foxglove_tf_publisher.launch.py  tf_publisher.launch.py
src/estimation/tf_publisher/src/: tf_publisher.cpp
src/perception/cone_fusion/: CMakeLists.txt  package.xml
src/perception/cone_fusion/config/: default.yaml
src/perception/cone_fusion/include/: cone_fusion.hpp
src/perception/cone_fusion/launch/: cone_fusion.launch.py
src/perception/cone_fusion/src/: cone_fusion.cpp  main.cpp
src/perception/depth_estimation/: CMakeLists.txt  package.xml
src/perception/depth_estimation/config/: default.yaml
src/perception/depth_estimation/include/: depth_estimation.hpp
src/perception/depth_estimation/launch/: depth_estimation.launch.py
src/perception/depth_estimation/src/: depth_estimation.cpp  main.cpp
src/perception/lidar_cone_detector/: CMakeLists.txt  info.txt  package.xml
src/perception/lidar_cone_detector/include/lidar_cone_detector/: lidar_cone_detector_node.hpp
src/perception/lidar_cone_detector/launch/: lidar_cone_detector.launch.py
src/perception/lidar_cone_detector/src/: lidar_cone_detector_node.cpp  main.cpp
src/perception/perception_msgs/: CMakeLists.txt  README.md  package.xml
src/perception/perception_msgs/msg/: BoundingBox.msg  BoundingBoxDebug.msg  BoxArray.msg  BoxArrayDebug.msg  PipelineRuntime.msg
src/perception/sensor_fusion/: CMakeLists.txt  README.md  package.xml
src/perception/sensor_fusion/config/: default.yaml
src/perception/sensor_fusion/include/: fusion.hpp
src/perception/sensor_fusion/launch/: sensor_fusion.launch.py
src/perception/sensor_fusion/src/: fusion.cpp  helper.cpp  main.cpp
src/perception/yolo_camera_detector/: CMakeLists.txt  package.xml
src/perception/yolo_camera_detector/config/: default.yaml
src/perception/yolo_camera_detector/include/: camera_detector.hpp
src/perception/yolo_camera_detector/launch/: yolo_camera_detector.launch.py
src/perception/yolo_camera_detector/src/: camera_detector.cpp  main.cpp
tools/rosdep/: CMakeLists.txt  README.md  amz.list  amz.yaml  generate_dep.sh  package.xml
(+75 files in other folders)
