<?xml version="1.0"?>
<package format="3">
  <name>control_msgs</name>
  <version>0.0.0</version>
  <description>The control_msgs package</description>

  <maintainer email="nyasar@ethz.ch">Nazim Yasar</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Other dependencies -->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

   <!-- Dependencies for message generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
