<package format="3">
  <name>hesai_ros_driver</name>
  <version>0.0.1</version>
  <description>The hesai_ros_driver_node package</description>
  
  <maintainer email="freddefokue@outlook.com">Fred Defokue</maintainer>
  <license>Modified BSD</license>

  <!-- Build system tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
