<?xml version="1.0"?>
<package format="2">
  <name>vcu_comm_interface</name>
  <version>0.0.1</version>
  <description>The vcu_comm_interface package</description>

  <maintainer email="stanislaw.piasecki@inf.ethz.ch">spiasecki</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autonomous_msgs</depend>
  <depend>vcu_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
