<?xml version="1.0"?>
<package format="3">
  <name>boundary_estimation</name>
  <version>2.0.0</version>
  <description>Find the right track with Bayes theorem through the delaunay triangulation of the cones</description>
  <maintainer email="lcodelppi@student.ethz.ch">Lorenzo Codeluppi</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!--For custom message import-->
  <depend>autonomous_msgs</depend>
  <depend>estimation_msgs</depend>

  <!--Other depends-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3</depend>
  <depend>amz-libcgal-qt5-dev</depend>
  <depend>message_filters</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
