<?xml version="1.0"?>
<package format="2">
  <name>tf_publisher</name>
  <version>1.0.0</version>
  <description>Navigation Sensor TF Publisher</description>

  <maintainer email="gpiatelli@ethz.ch">Giacomo Piatelli</maintainer>
  <license>BSD</license>
  <author email="gpiatelli@ethz.ch">Giacomo Piatelli</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vcu_msgs</depend>
  <depend>geodetic_utils</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>


  <build_export_depend>eigen3_cmake_module</build_export_depend>
  <exec_depend>eigen3_cmake_module</exec_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

</package>
