<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cone_fusion</name>
  <version>0.0.0</version>
  <description>Final cone fusion</description>
  <maintainer email="trgabl@student.ethz.ch">Tristan Gabl</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>message_filters</depend>
    <depend>sensor_msgs</depend>
    <depend>perception_msgs</depend>
    <depend>autonomous_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
