<?xml version="1.0"?>
<package format="3">
  <name>perception_msgs</name>
  <version>0.0.0</version>
  <description>The perception_msgs package</description>

  <maintainer email="mouniraki@protonmail.com">Mounir Raki</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For loading custom messages -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_export_depend>rosidl_default_runtime</build_export_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Other dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>autonomous_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
