<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sensor_fusion</name>
  <version>0.0.0</version>
  <description>Sensor Fusion</description>
  <maintainer email="trgabl@student.ethz.ch">Tristan Gabl</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ros2launch</depend>
  <build_depend>pcl_conversions</build_depend>
  <depend>cv_bridge</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
