<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_camera_detector</name>
  <version>0.0.0</version>
  <description>YOLO camera cone detector</description>
  <maintainer email="frantisek.kmjec@gmail.com">František Kmječ</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>message_filters</depend>
  <depend>sensor_msgs</depend>
  <depend>perception_msgs</depend>
  <depend>autonomous_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros2launch</depend>
  <depend>cv_bridge</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
