<?xml version="1.0"?>
<package format="3">
  <name>slam_common</name>
  <version>1.0.0</version>
  <description>Slam common package</description>
  <maintainer email="yequek@ethz.ch">Yee Hsien Quek</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!--For custom message import-->
  <depend>autonomous_msgs</depend>

  <!--Other depends-->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
